--- a/root/etc/youtube-dl.conf
+++ b/root/etc/youtube-dl.conf
@@ -8,7 +8,7 @@
 --download-archive /config/archive.txt
 
 #Specify output format
--o '/videos/%(channel)s/%(playlist_title)s - %(title)s.%(ext)s'
+-o '/videos/%(uploader)s/%(title)s/%(title)s.%(ext)s'
 
 #Rate Limit
 --limit-rate 4M
@@ -19,8 +19,6 @@
 --write-annotations
 --write-all-thumbnails
 --write-sub
---embed-subs
---embed-thumbnail
 --add-metadata
 
 # Do not contact the youtube-dl server for debugging
