--- a/root/config/youtube-dl.conf
+++ b/root/config/youtube-dl.conf
@@ -8,7 +8,7 @@
 --download-archive /config/archive.txt
 
 #Specify output format
--o '/videos/%(uploader)s/%(title)s/%(title)s.%(ext)s'
+-o '/videos/%(uploader)s/%(title)s (%(id)s)/%(title)s (%(id)s).%(ext)s'
 
 #Rate Limit
 --limit-rate 4M
